Se crea visual de inicio de sesion y su ruta

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,2 @@
-<button (click)="click()">ENVIAR</button>
-<h1>{{number}}</h1>
-<input type="text" [(ngModel)]="usuario">
-<input type="password">
-<app-inicio></app-inicio>
+
+<router-outlet></router-outlet>
