--- a/src/app/inicio/inicio.html
+++ b/src/app/inicio/inicio.html
@@ -1,1 +1,11 @@
-<h1>Titulo</h1>
+<div id="contenedor">
+<div id="formulario">
+    <img src="https://la.mathworks.com/academia/tah-portal/universidad-cooperativa-de-colombia-31322369/_jcr_content/schoolLogo.adapt.full.medium.png/1742544325593.png" style="width: 20dvw;">
+    <input type="text" placeholder="USUARIO"[(ngModel)]="name">
+    <input type="password" placeholder="CONTRASEÑA"[(ngModel)]="password">
+    <a href="">Olvidaste tu contraseña?</a>
+    <button (click)="ingreso()">Enviar</button>
+</div>
+</div>
+
+
