--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+}
+
+html{
+    background-image: url("https://ucc.edu.co/campus-medellin-envigado/PublishingImages/Paginas/12-factores-de-acreditacion-a-profundidad/fachada.JPG");
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+body{
+    width: 100%;
+    height: 100%;
+}
