--- a/src/app/inicio/inicio.html
+++ b/src/app/inicio/inicio.html
@@ -1,3 +1,4 @@
+<html>
 <div id="contenedor">
 <div id="formulario">
     <img src="https://la.mathworks.com/academia/tah-portal/universidad-cooperativa-de-colombia-31322369/_jcr_content/schoolLogo.adapt.full.medium.png/1742544325593.png" style="width: 20dvw;">
@@ -7,5 +8,4 @@
     <button (click)="ingreso()">Enviar</button>
 </div>
 </div>
-
-
+</html>
