adelanto visual en P_inicial

--- a/src/app/p-inicial/p-inicial.html
+++ b/src/app/p-inicial/p-inicial.html
@@ -1,1 +1,41 @@
-<p>p-inicial works!</p>
+<html>
+
+    <div id="encabezado">
+        <img src="https://la.mathworks.com/academia/tah-portal/universidad-cooperativa-de-colombia-31322369/_jcr_content/schoolLogo.adapt.full.medium.png/1742544325593.png">  
+    </div>
+
+    <div id="contenedor">
+        <div id="horario">
+            <div class="recuadro">
+                 <img src="https://www.svgrepo.com/show/158264/schedule.svg">
+            </div>
+            <h2 class="t_titulo">Horario</h2>
+            <p class="t_parrafo">Revisa con antelacion tu horario semanal</p>
+        </div>
+
+        <div id="programacion">
+            <div class="recuadro">
+                <img src="https://www.svgrepo.com/show/157090/month-calendar.svg" alt="">
+            </div>
+            <h2 class="t_titulo">programacion</h2>
+            <p class="t_parrafo">Revisa tus actividades Programadas</p>
+        </div>
+
+        <div id="tickets">
+            <div class="recuadro">
+                <img src="https://www.svgrepo.com/show/240421/tickets-ticket.svg" alt="">
+            </div>
+            <h2 class="t_titulo">Tickets</h2>
+            <p class="t_parrafo">Programa tus eventos con antelacion y mesa de ayuda</p>
+        </div>
+
+        <div id="inventario">
+            <div class="recuadro">
+                <img src="https://www.svgrepo.com/show/230430/check-list-tick.svg" alt="">
+            </div>
+            <h2 class="t_titulo">inventario</h2>
+            <p class="t_parrafo">Actualiza y visualiza el inventario</p>
+        </div>
+    </div>
+    
+</html>
