--- a/src/app/horario/horario.css
+++ b/src/app/horario/horario.css
@@ -60,8 +60,8 @@ aside p{
 }
 
 #encabezado{
-    background-color: rgb(241, 21, 21);
-    width: 92.8vw;
+    background-color: rgb(255, 255, 255);
+    width: 93%;
     height: 22%;
     float: inline-end;
     margin: 0;
