--- a/src/app/p-inicial/p-inicial.html
+++ b/src/app/p-inicial/p-inicial.html
@@ -5,7 +5,7 @@
     </div>
 
     <div id="contenedor">
-        <div id="horario">
+        <div id="horario" (click)="click_h()">
             <div class="recuadro">
                  <img src="https://www.svgrepo.com/show/158264/schedule.svg">
             </div>
