--- a/src/app/horario/horario.css
+++ b/src/app/horario/horario.css
@@ -7,10 +7,11 @@ aside{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 6%;
+    width: 5%;
     background-color: black;
     align-items: center;
     margin: 0;
+    position: fixed;
 }
 
 #navegate{
@@ -24,8 +25,8 @@ aside{
 }
 
 .btn{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: transparent;
     margin: 15px;
     border: none;
@@ -36,11 +37,12 @@ aside{
 }
 
 .btn svg:hover{
-    fill: rgb(70, 70, 223);
+    fill: #01abc8;
 }
 
 .btn:hover{
-    color:rgb(70, 70, 223) ;
+    color:#01abc8;
+
 }
 
 aside p{
@@ -57,23 +59,25 @@ aside p{
 }
 #encabezado img{
     width: 30vw;
+    margin-left: 5%;
 }
 
 #encabezado{
     background-color: white;
-    width: 94%;
-    height: 22%;
+    width: 100%;
+    height: 22vh;
     float: inline-end;
     margin: 0;
 }
 
 #contenedor{
-    width: 94%;
-    height: 77.5vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     align-content: center;
+    flex-wrap: wrap;
     background-color: #d9d9d9;
 }
 
@@ -90,6 +94,7 @@ aside p{
     align-items: center;
     flex-wrap: wrap;
     flex-direction: column;
+    margin: 5px;
     
 }
 .recuadro{
@@ -117,10 +122,15 @@ aside p{
 
 #semana{
     background-color: white;
-    width: 70vw;
+    width: 90%;
     height: 40vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    margin: 10px;
+    border-radius: 30px;
+    margin-left: 5%;
 }
+
+
+
