--- a/src/app/p-inicial/p-inicial.css
+++ b/src/app/p-inicial/p-inicial.css
@@ -35,7 +35,7 @@
     border-color: black;
     display: flex;
     justify-content: center;
-    margin: 1vh;
+    margin: 2vh;
     flex-wrap: wrap;
 }
 
@@ -58,3 +58,10 @@
     align-items: center;
 }
 
+#horario:hover, #programacion:hover, #tickets:hover, #inventario:hover{
+    transform: scale(1.1);
+}
+
+h2{
+    font-size: 20px;
+}
