--- a/src/app/reservas/reservas.css
+++ b/src/app/reservas/reservas.css
@@ -4,6 +4,7 @@
     padding: 0;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
 aside{
     float: left;
     display: flex;
@@ -68,5 +69,17 @@ aside p{
     float: inline-end;
     margin: 0;
 }
+ /* data table*/
 
+ .contDataTable{
+    display: flex;
+    width: 94%;
+    height: 100%;
+    justify-content: center;
+    align-items: end;
+ }
+
+ .dataTable{
+    width: 100%;
+ }
 
