--- a/src/app/reservas/reservas.html
+++ b/src/app/reservas/reservas.html
@@ -36,6 +36,8 @@
 
 </aside>
 
-<div class="dataTable">
-<table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+<div class="contDataTable">
+    <div class="dataTable">
+        <table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+    </div>
 </div>
