--- a/src/app/reservas/reservas.css
+++ b/src/app/reservas/reservas.css
@@ -69,4 +69,20 @@ aside p{
     margin: 0;
 }
 
+/*dataTable*/
+
+.dataTable{
+    width: 90%;
+}
+
+.cont_table{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+
 
