--- a/src/app/reservas/reservas.html
+++ b/src/app/reservas/reservas.html
@@ -37,5 +37,7 @@
 </aside>
 
 <div class="dataTable">
-<table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+    <div class="cont_table">
+        <table datatable [dtOptions]="dtOptions" class="row-border hover"></table>
+    </div>
 </div>
